<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".activities.MainActivity">

    <ImageView
            android:id="@+id/img_avatar"
            android:layout_centerHorizontal="true"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical"
            android:layout_centerInParent="true">

        <EditText
                android:id="@+id/et_email"
                android:hint="@string/email"
                style="@style/InputField"/>
        <EditText
                android:id="@+id/et_mobile"
                android:hint="@string/phone"
                style="@style/InputField"/>
        <TextView
                android:text="@string/subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <CheckBox
                android:id="@+id/cb_eng"
                android:text="@string/subject_eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <CheckBox
                android:id="@+id/cb_math"
                android:text="@string/subject_math"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <CheckBox
                android:id="@+id/cb_comp"
                android:text="@string/subject_comp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
            android:id="@+id/btn_finish"
            style="@style/ButtonBottom"
            android:text="@string/finish_button"
            android:drawableRight="@drawable/ic_done_white_24dp"/>

</RelativeLayout>