<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".activities.MainActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/logo"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical"
            android:layout_centerInParent="true">

        <EditText
                android:id="@+id/et_first_name"
                android:hint="@string/first_name"
                style="@style/InputField"/>
        <EditText
                android:id="@+id/et_last_name"
                android:hint="@string/last_name"
                style="@style/InputField"/>
        <EditText
                android:id="@+id/et_age"
                android:hint="@string/age"
                android:inputType="number"
                style="@style/InputField"/>

        <RadioGroup
                android:id="@+id/rg_gender"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
            <TextView
                    android:text="@string/gender"
                    android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
            <RadioButton
                    android:checked="true"
                    android:id="@+id/rb_male"
                    style="@style/gender_radio"
                    android:text="@string/gender_male"/>
            <RadioButton
                    android:id="@+id/rb_female"
                    style="@style/gender_radio"
                    android:text="@string/gender_female"/>
        </RadioGroup>

    </LinearLayout>

    <Button
            android:id="@+id/btn_next"
            style="@style/ButtonBottom"
            android:text="@string/next_button"
            android:drawableRight="@drawable/ic_arrow_forward_black_24dp"/>


</RelativeLayout>