<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".activities.MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_pic"
            android:layout_centerHorizontal="true"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:elevation="1dp"
            android:background="@drawable/diagonallayout_circle"
            android:src="@drawable/avatar"/>

    <TextView
            android:id="@+id/tv_name"
            android:layout_below="@id/img_pic"
            android:hint="@string/email"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/InputField"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical"
            android:layout_centerInParent="true">

        <RelativeLayout
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/tv_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"/>
            <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:hint="@string/gender"/>

        </RelativeLayout>

        <TextView
                android:id="@+id/tv_email"
                android:hint="@string/email"
                android:drawableLeft="@drawable/ic_email_gray"
                style="@style/InputField"/>
        <TextView
                android:id="@+id/tv_phone"
                android:hint="@string/phone"
                android:drawableLeft="@drawable/ic_local_phone_gray"
                style="@style/InputField"/>
        <TextView
                android:text="@string/subject"
                android:drawableLeft="@drawable/ic_book_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tv_sub"
                android:layout_marginLeft="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject"/>

    </LinearLayout>

    <!--<Button-->
            <!--android:id="@+id/btn_exit"-->
            <!--style="@style/ButtonBottom"-->
            <!--android:text="@string/finish_button"-->
            <!--android:drawableRight="@drawable/ic_done_white_24dp"/>-->

</RelativeLayout>